kubernetes/main/apps/default/nas/files/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: files
  namespace: default
spec:
  clusterIP: None
  ports:
    - name: https
      protocol: TCP
      port: 7001
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: files
  namespace: default
  labels:
    kubernetes.io/service-name: files
addressType: IPv4
endpoints:
  - addresses:
      - 192.168.1.3
    conditions:
      ready: true
      serving: true
      terminating: false
ports:
  - name: https
    port: 7001
    protocol: TCP
