kubernetes/main/apps/default/nas/files/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/client-body-buffer-size: "850m"
    nginx.ingress.kubernetes.io/proxy-body-size: "850m"
    external-dns.alpha.kubernetes.io/target: external-ingress.garb.dev
    external-dns.alpha.kubernetes.io/hostname: &host "files.garb.dev"
    external-dns.alpha.kubernetes.io/ttl: "120"
  name: external-ingress-files
  namespace: default
spec:
  ingressClassName: external
  rules:
    - host: *host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: files
                port:
                  number: 7001
  tls:
    - hosts:
        - *host
      secretName: wildcard-cert-tls
