kubernetes/main/apps/default/nas/files/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    external-dns: public
    external-dns.kubernetes.io/hostname: files.garb.dev
  name: files-route
  namespace: default
spec:
  hostnames:
    - files.garb.dev
  parentRefs:
    - name: envoy-external
      namespace: networking
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: files-backend
